responsive design applied to all pages

--- a/picnic_choice2.html
+++ b/picnic_choice2.html
@@ -67,6 +67,7 @@
       </div>
     </section>
 
+    <div class="container">
     <!-- TypeWriter effect code implemented using W3Schools example. 'window.onload=' added instead of button for better usability -->
     <p id="choicetxt"></p>
     <script>
@@ -82,6 +83,7 @@
           }
         }
     </script>
+    </div>
 
     <!-- Polaroid Images code implemented using W3Schools.com example. Amended tags from divs for more semantic structure and meaning -->
     <div class="fleximages">
@@ -93,7 +95,7 @@
         </figcaption>
       </figure>
 
-      <figure id="steak_baguette" class="polaroid">
+      <figure id="steak_baguette" class="polaroid flex_item_two">
         <img src="images/meals/steak_baguette_2_600x400.jpg" alt="steak and cheese baguette in foil">
         <figcaption class="txtcontainer">
           Steak and Cheese Baguette
@@ -101,7 +103,7 @@
       </figure>
 
 
-      <figure id="veg_soup" class="polaroid">
+      <figure id="veg_soup" class="polaroid flex_item">
         <img src="images/meals/veg_soup_600x400.jpg" alt="flask of vegetable soup and croutons">
         <figcaption class="txtcontainer">
           Vegetable Soup
