--- a/picnic_choice3.html
+++ b/picnic_choice3.html
@@ -67,6 +67,7 @@
             </div>
           </section>
 
+          <div class="container">
         <!-- TypeWriter effect code implemented using W3Schools example. 'window.onload=' added instead of button for better usability -->
         <p id="choicetxt"></p>
         <script>
@@ -82,6 +83,7 @@
                     }
                 }
         </script>
+</div>
 
         <!-- Polaroid Images code implemented using W3Schools.com example. Amended tags from divs for more semantic structure and meaning -->
         <div class="fleximages">
@@ -93,7 +95,7 @@
                 </figcaption>
             </figure>
 
-            <figure id="apple_peanutbtr" class="polaroid">
+            <figure id="apple_peanutbtr" class="polaroid flex_item_two">
                 <img src="images/snacks/apple_peanutbutter_600x400.jpg" alt="sliced apple and peanut butter snack">
                 <figcaption class="txtcontainer">
                     Apple and Peanut Butter
@@ -101,7 +103,7 @@
             </figure>
 
 
-            <figure id="nutrigrain_bar" class="polaroid">
+            <figure id="nutrigrain_bar" class="polaroid flex_item">
                 <img src="images/snacks/nutrigrain_bar_600x400.jpg" alt="multigrain cereal bar with strawberry filling">
                 <figcaption class="txtcontainer">
                     Multigrain Bar
