--- a/travel_car.html
+++ b/travel_car.html
@@ -67,6 +67,7 @@
       </div>
     </section>
 
+<div class="container">
     <!-- TypeWriter effect code implemented using W3Schools example. 'window.onload=' added instead of button for better usability -->
     <p id="choicetxt"></p>
     <script>
@@ -82,6 +83,7 @@
           }
         }
     </script>
+</div>
 
     <div class="fleximages">
       <!-- Polaroid Images code implemented using W3Schools.com example. Amended tags from divs for more semantic structure and meaning -->
@@ -93,7 +95,7 @@
       </figure>
 
 
-      <figure id="no_carpool" class="polaroid">
+      <figure id="no_carpool" class="polaroid flex_item_two">
         <img src="images/travel/solo_drive_600x400.jpg" alt="closeup of woman in car driving solo">
         <figcaption class="txtcontainer">
           Meet at the park
