--- a/travel_choices.html
+++ b/travel_choices.html
@@ -67,6 +67,7 @@
       </div>
     </section>
     
+    <div class="container">
     <!-- TypeWriter effect code implemented using W3Schools example. 'window.onload=' added instead of button for better usability -->
     <p id="choicetxt"></p>
     <script>
@@ -82,6 +83,8 @@
           }
         }
     </script>
+    </div>
+
     <!-- Polaroid Images code implemented using W3Schools.com example. Amended tags from divs for more semantic structure and meaning -->
     <div class="fleximages">
 
@@ -92,7 +95,7 @@
         </figcaption>
       </figure>
 
-      <figure id="walk" class="polaroid">
+      <figure id="walk" class="polaroid flex_item_two">
         <img src="images/travel/walk_dog_600x400.jpg" alt="person walking with dog">
         <figcaption class="txtcontainer">
           Walk with the Dog
@@ -100,7 +103,7 @@
       </figure>
 
 
-      <figure id="car" class="polaroid">
+      <figure id="car" class="polaroid flex_item">
         <img src="images/travel/blue_car_600x400.jpg" alt="blue car travelling along windy road in countryside">
         <figcaption class="txtcontainer">
           Take the Car
