--- a/travel_walk.html
+++ b/travel_walk.html
@@ -67,6 +67,7 @@
       </div>
     </section>
     
+    <div class="container">
     <!-- TypeWriter effect code implemented using W3Schools example. 'window.onload=' added instead of button for better usability -->
     <p id="choicetxt"></p>
     <script>
@@ -82,6 +83,8 @@
           }
         }
     </script>
+    </div>
+
     <!-- Polaroid Images code implemented using W3Schools.com example. Amended tags from divs for more semantic structure and meaning -->
     <div class="fleximages">
       <figure id="leave" class="polaroid">
@@ -92,7 +95,7 @@
 
       </figure>
 
-      <figure id="pick_up" class="polaroid">
+      <figure id="pick_up" class="polaroid flex_item_two">
         <img src="images/travel/pickup_dogpoo_600x400.jpg" alt="woman picking up her dog's poo">
         <figcaption class="txtcontainer">
           Pick It Up
