--- a/waste_tunapasta_choice.html
+++ b/waste_tunapasta_choice.html
@@ -66,7 +66,8 @@
               </div>
             </div>
           </section>
-          
+        
+        <div class="container">
         <!-- TypeWriter effect code implemented using W3Schools example. 'window.onload=' added instead of button for better usability -->
         <p id="choicetxt"></p>
         <script>
@@ -82,6 +83,7 @@
                     }
                 }
         </script>
+        </div>
 
         <div class="fleximages">
             <figure class="polaroid">
@@ -94,14 +96,14 @@
                 </a>
             </figure>
             <!-- Polaroid Images code implemented using W3Schools.com example. Amended tags from divs for more semantic structure and meaning -->
-            <figure id="gwaste_bin" class="polaroid">
+            <figure id="gwaste_bin" class="polaroid flex_item_two">
                 <img src="images/waste/general_wastebin_600x400.jpg" alt="black general waste litter bin in park">
                 <figcaption class="txtcontainer">
                     Throw in general waste bin
                 </figcaption>
             </figure>
 
-            <figure id="wash_recycle" class="polaroid">
+            <figure id="wash_recycle" class="polaroid flex_item">
                 <img src="images/waste/wash_recycle_600x400.jpg" alt="person washing glass jar for recycling">
                 <figcaption class="txtcontainer">
                     Once home, wash for recycling
