--- a/picnic_choice4.html
+++ b/picnic_choice4.html
@@ -67,6 +67,7 @@
             </div>
           </section>
 
+          <div class="container">
         <!-- TypeWriter effect code implemnted using W3Schools example. 'window.onload=' added instead of button for better usability -->
         <p id="choicetxt"></p>
         <script>
@@ -82,6 +83,7 @@
                     }
                 }
         </script>
+</div>
 
         <!-- Polaroid Images code implemented using W3Schools.com example. Amended tags from divs for more semantic structure and meaning -->
         <div class="fleximages">
@@ -93,7 +95,7 @@
                 </figcaption>
             </figure>
 
-            <figure id="kitchen_roll" class="polaroid">
+            <figure id="kitchen_roll" class="polaroid flex_item_two">
                 <img src="images/cleaning/kitchen_roll_600x400.jpg"
                     alt="kitchen paper towel on holder hanging from shelf">
                 <figcaption class="txtcontainer">
@@ -102,7 +104,7 @@
             </figure>
 
 
-            <figure id="reusable_towels" class="polaroid">
+            <figure id="reusable_towels" class="polaroid flex_item">
                 <img src="images/cleaning/reusable_unpaper_towels_600x400.jpg"
                     alt="reusable non-paper towels on towel holder">
                 <figcaption class="txtcontainer">
