--- a/travel_bus.html
+++ b/travel_bus.html
@@ -67,6 +67,7 @@
       </div>
     </section>
 
+    <div class="container">
     <!-- TypeWriter effect code implemented using W3Schools example. 'window.onload=' added instead of button for better usability -->
     <p id="choicetxt"></p>
     <script>
@@ -82,6 +83,7 @@
           }
         }
     </script>
+</div>
 
     <!-- Polaroid Images code implemented using W3Schools.com example. Amended tags from divs for more semantic structure and meaning -->
     <div class="fleximages">
@@ -92,7 +94,7 @@
         </figcaption>
       </figure>
 
-      <figure id="walk" class="polaroid">
+      <figure id="walk" class="polaroid flex_item_two">
         <img src="images/travel/walk_dog_600x400.jpg" alt="person walking with dog">
         <figcaption class="txtcontainer">
           Walk Instead
