--- a/waste_nonpapertowel_choice.html
+++ b/waste_nonpapertowel_choice.html
@@ -66,7 +66,8 @@
               </div>
             </div>
           </section>
-          
+        
+        <div class="container">
         <!-- TypeWriter effect code implemented using W3Schools example. 'window.onload=' added instead of button for better usability -->
         <p id="choicetxt"></p>
         <script>
@@ -82,6 +83,7 @@
                     }
                 }
         </script>
+        </div>
 
         <div class="fleximages">
             <!-- Polaroid Images code implemented using W3Schools.com example. Amended tags from divs for more semantic structure and meaning -->
