--- a/waste_nutrigrain_choice.html
+++ b/waste_nutrigrain_choice.html
@@ -66,7 +66,8 @@
               </div>
             </div>
           </section>
-          
+        
+        <div class="container">
         <!-- TypeWriter effect code implemented using W3Schools example. 'window.onload=' added instead of button for better usability -->
         <p id="choicetxt"></p>
         <script>
@@ -82,6 +83,7 @@
                     }
                 }
         </script>
+        </div>
 
         <div class="fleximages">
             <!-- Polaroid Images code implemented using W3Schools.com example. Amended tags from divs for more semantic structure and meaning -->
@@ -95,14 +97,14 @@
                 </a>
             </figure>
 
-            <figure id="gwaste_bin" class="polaroid">
+            <figure id="gwaste_bin" class="polaroid flex_item_two">
                 <img src="images/waste/general_wastebin_600x400.jpg" alt="black general waste litter bin in park">
                 <figcaption class="txtcontainer">
                     Throw in general waste bin
                 </figcaption>
             </figure>
 
-            <figure id="save" class="polaroid">
+            <figure id="save" class="polaroid flex_item">
                 <img src="images/snacks/nutrigrain_bar_600x400.jpg" alt="multigrain cereal bar with strawberry filling">
                 <figcaption class="txtcontainer">
                     Save for later
