--- a/waste_papertowel_choice.html
+++ b/waste_papertowel_choice.html
@@ -66,7 +66,8 @@
               </div>
             </div>
           </section>
-          
+         
+        <div class="container">
         <!-- TypeWriter effect code implemented using W3Schools example. 'window.onload=' added instead of button for better usability -->
         <p id="choicetxt"></p>
         <script>
@@ -82,6 +83,7 @@
                     }
                 }
         </script>
+        </div>
 
         <div class="fleximages">
             <!-- Polaroid Images code implemented using W3Schools.com example. Amended tags from divs for more semantic structure and meaning -->
@@ -92,7 +94,7 @@
                 </figcaption>
             </figure>
 
-            <figure id="recycle" class="polaroid">
+            <figure id="recycle" class="polaroid flex_item_two">
                 <img src="images/waste/various_recycingbins_600x400.jpg"
                     alt="general, plastic, cans, paper and mixed recycling bins">
                 <figcaption class="txtcontainer">
