--- a/waste_tea_choice.html
+++ b/waste_tea_choice.html
@@ -67,6 +67,7 @@
       </div>
     </section>
     
+    <div class="container">
     <!-- TypeWriter effect code implemented using W3Schools example. 'window.onload=' added instead of button for better usability -->
     <p id="choicetxt"></p>
     <script>
@@ -82,6 +83,8 @@
           }
         }
     </script>
+    </div>
+
     <!-- Polaroid Images code implemented using W3Schools.com example. Amended tags from divs for more semantic structure and meaning -->
     <div class="fleximages">
       <figure id="food_caddy" class="polaroid">
@@ -92,7 +95,7 @@
       </figure>
 
 
-      <figure id="gwaste_bin" class="polaroid">
+      <figure id="gwaste_bin" class="polaroid flex_item_two">
         <img src="images/waste/general_wastebin_600x400.jpg" alt="black general waste litter bin in park">
         <figcaption class="txtcontainer">
           Throw in general waste bin
