responsiveness added to results page

--- a/results.html
+++ b/results.html
@@ -24,13 +24,15 @@
             <h2 class="subtitle">A game for making sustainable choices</h2>
         </header>
 
+        <div class="container">
         <p id="choicetxt">You are a... </p>
+    </div>
 
         <section>
             <div id="flexbars_vertical">
                 <!-- Progress Bars code implemented using W3Schools.com example as basis -->
                 <div class="flex_progressbox_result">
-                    <div class="progressbox">
+                    <div class="progressbox_result">
                         <img class="iconsize" src="icons/carbon_footprint_icon.svg"
                             alt="pink footprint with co2 written inside to symbolise carbon footprint icon">
                         <div id="co2barline" class="myProgress">
@@ -46,7 +48,7 @@
                 </div>
 
                 <div class="flex_progressbox_result">
-                    <div class="progressbox">
+                    <div class="progressbox_result">
                         <img class="iconsize" src="icons/water_pollution_icon.svg"
                             alt="blue waterdrop with bacteria inside to symbolise water pollution icon">
                         <div id="waterbarline" class="myProgress">
@@ -62,7 +64,7 @@
                 </div>
 
                 <div class="flex_progressbox_result">
-                    <div class="progressbox">
+                    <div class="progressbox_result">
                         <img class="iconsize" src="icons/waste_icon.svg" alt="grey bin to symbolise general waste icon">
                         <div id="binbarline" class="myProgress">
                             <div id="binbarcolor" class="bar"></div>
@@ -77,7 +79,7 @@
                 </div>
 
                 <div class="flex_progressbox_result">
-                    <div class="progressbox">
+                    <div class="progressbox_result">
                         <img class="iconsize" src="icons/deforestation_icon.svg"
                             alt="green tree stump with axe in the top to symbolise deforestation icon">
                         <div id="treebarline" class="myProgress">
