--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="../css/index.css">
-    <script src="../js/userInput.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <script src="js/userInput.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="../icons/favicon_picnic_basket.png"/>
+    <link rel="icon" type="image/png" href="icons/favicon_picnic_basket.png"/>
     <title>Green Picnic</title>
 
 </head>
@@ -16,7 +16,7 @@
     <div class="wrapper">
         
         <header>
-            <h1>Welcome to Green PicNic <img id="logo" src="../icons/favicon_picnic_basket.png"
+            <h1>Welcome to Green PicNic <img id="logo" src="icons/favicon_picnic_basket.png"
                     alt="green picnic basket icon"></h1>
             <h2 class="subtitle">A game for making sustainable choices</h2>
         </header>
@@ -29,13 +29,13 @@
             the
             picnic.
             Throughout the game, your choices will affect the environental factors known as Carbon Footprint<img
-                class="iconsize_index" src="../icons/carbon_footprint_icon.svg"
+                class="iconsize_index" src="icons/carbon_footprint_icon.svg"
                 alt="pink footprint with co2 written inside to symbolise carbon footprint icon">, Water Pollution<img
-                class="iconsize_index" src="../icons/water_pollution_icon.svg"
+                class="iconsize_index" src="icons/water_pollution_icon.svg"
                 alt="blue waterdrop with bacteria inside to symbolise water pollution icon">, Habitat Destruction<img
-                class="iconsize_index" src="../icons/deforestation_icon.svg"
+                class="iconsize_index" src="icons/deforestation_icon.svg"
                 alt="green tree stump with axe in the top to symbolise deforestation icon">and
-            Waste<img class="iconsize_index" src="../icons/waste_icon.svg" alt="grey bin to symbolise general waste icon">.
+            Waste<img class="iconsize_index" src="icons/waste_icon.svg" alt="grey bin to symbolise general waste icon">.
             It is your job to make sure the environmental factors are as low as possible whilst getting to the park to
             enjoy
             your picnic with a friend.
