broken link corrected

--- a/html/park.html
+++ b/html/park.html
@@ -107,7 +107,7 @@
         window.location.href = "waste_water_choice.html"
       }
       if (localStorage.getItem('drinkChoice') === 'Tea') {
-        window.location.href = "html/waste_tea_choice.html"
+        window.location.href = "waste_tea_choice.html"
       }
       if (localStorage.getItem('drinkChoice') === 'Smoothie') {
         window.location.href = "waste_smoothie_choice.html"
