semi-colon added

--- a/html/results.html
+++ b/html/results.html
@@ -116,7 +116,7 @@
                 waterResult.textContent = `${waterBar}` + "%";
             }
             else {
-                waterResult.textContent = "50%"
+                waterResult.textContent = "50%";
             }
 
             const binResult = document.querySelector('#binresult')
