relinking pathway for restart button in results

--- a/html/results.html
+++ b/html/results.html
@@ -155,7 +155,7 @@
         restartBtn.addEventListener("click", function () {
             localStorage.clear();
             // Redirect user to next page after selection
-            window.location.href = "index.html";
+            window.location.href = "../index.html";
         })
 
     </script>
