Footer details updated

--- a/html/waste_steakbaguette_choice.html
+++ b/html/waste_steakbaguette_choice.html
@@ -153,13 +153,13 @@
     </script>
 
 
-    <footer>
-        <div class="flexfooter">
-            <p>Module: SET08101<br>Module: Web Technologies</p>
-            <p>Matriculation No: 40117527</p>
-            <p>Created By Catherine Campbell &copy; 2021</p>
-        </div>
-    </footer>
+<footer>
+  <div class="flexfooter">
+    <p>Module: SET08101 Web Technologies</p>
+    <p>Matriculation No: 40117527</p>
+    <p>Created By Catherine Campbell &copy; 2023</p>
+  </div>
+</footer>
 
 </body>
 
