--- a/html/picnic_choice1.html
+++ b/html/picnic_choice1.html
@@ -138,9 +138,9 @@
 
   <footer>
     <div class="flexfooter">
-      <p>Module: SET08101<br>Module: Web Technologies</p>
+      <p>Module: SET08101 Web Technologies</p>
       <p>Matriculation No: 40117527</p>
-      <p>Created By Catherine Campbell &copy; 2021</p>
+      <p>Created By Catherine Campbell &copy; 2023</p>
     </div>
   </footer>
 
