--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 
     <footer>
         <div class="flexfooter">
-            <p>Module: SET08101<br>Module: Web Technologies</p>
-            <p>Matriculation No: 40117527</p>
-            <p>Created By Catherine Campbell &copy; 2021</p>
+          <p>Module: SET08101 Web Technologies</p>
+          <p>Matriculation No: 40117527</p>
+          <p>Created By Catherine Campbell &copy; 2023</p>
         </div>
-    </footer>
+      </footer>
 
 </body>
 
