responsiveness added to main heading

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
         
         <header>
-            <h1>Welcome to Green PicNic <img id="logo" src="icons/favicon_picnic_basket.png"
+            <h1>Welcome to <br class="line_break"> Green PicNic <img id="logo" src="icons/favicon_picnic_basket.png"
                     alt="green picnic basket icon"></h1>
             <h2 class="subtitle">A game for making sustainable choices</h2>
         </header>
