--- a/html/travel_choices.html
+++ b/html/travel_choices.html
@@ -20,7 +20,7 @@
 <body>
   <div class="wrapper">
     <header id="headerpage2">
-      <h1>Welcome to Green PicNic</h1>
+      <h1>Welcome to <br class="line_break">Green PicNic</h1>
       <h2 class="subtitle">A game for making sustainable choices</h2>
     </header>
 
